# yt-dlp_GUI

./: CMakeLists.txt  README.md  yt-dlp_GUI.py
.github/workflows/: main.yml
src/: MainWindow.cpp  MainWindow.h  main.cpp
